<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nointernetMainRelativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    tools:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/nointernetImageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="TODO"
            android:src="@drawable/no_internet_connection"/>

        <TextView
                android:id="@+id/nointernettextview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nointernetImageview"
                android:layout_gravity="center"
               android:layout_marginTop="@dimen/_5sdp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:autoSizeMaxTextSize="@dimen/_14ssp"
                android:autoSizeMinTextSize="5sp"
                android:autoSizeTextType="uniform"
                android:textColor="@color/text_primary"
                android:text="@string/internetmsg1"
                android:textSize="@dimen/_14ssp"/>


        <TextView
            android:id="@+id/nointernettextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nointernetImageview"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center"
            android:visibility="gone"
            android:autoSizeMaxTextSize="@dimen/_12ssp"
            android:autoSizeMinTextSize="5sp"
            android:autoSizeTextType="uniform"
            android:text="@string/error_common_network"
            android:textSize="@dimen/_12ssp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:fontFamily="@font/nunito_regular"
            android:textAllCaps="false"
            android:text="@string/retry"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/Widget.Fusion.Button.yellow"
            app:cornerRadius="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>