<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <!--android:background="@drawable/edit_box_white_border"-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">
        <!--android:background="@drawable/edit_box_white_border"-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_tv"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/select_image"
                android:textColor="@color/text_black" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_40sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_40sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llGalleryLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_image_black_24dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGalleryText"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/gallery1"

                    android:textColor="@color/text_black"
                    android:textSize="@dimen/_16ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llCameraLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_22sdp"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_photo_camera_black_24dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCameraText"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/camera1"

                    android:textColor="@color/text_black"
                    android:textSize="@dimen/_16ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.internal.BaselineLayout
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/bg_gray_light" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/text_black"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>